[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netops-workbench"
version = "0.1.0"
description = "Networking & Net-Sec desktop toolkit (wxPython GUI)"
authors = [{name="You"}]
requires-python = ">=3.10"
dependencies = [
    "wxPython>=4.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
